# figi-backend

./: .env  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
figi/: config.py
figi/db/: models.py
figi/graphql/: schema.py
figi/image/: face_extractor.py
figi/index/: index.py
figi/routers/: __init__.py  extract_face.py  graphql.py  image.py  images.py
src/: config.py  index.py  main.py
src/db/: database.py  models.py
src/graphql/: schema.py
src/image/: embeddings_generator.py  face_extractor.py  tree_crawler.py
test/: faces.py  gql_playground.py  images.py  schema.py
test_data/images/a/: d
